Main fixes on functions (get it working)

--- a/mcp-investor/functions_exploration.ipynb
+++ b/mcp-investor/functions_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,17 @@
     "#     WebsiteSearchTool\n",
     "# )\n",
     "import os\n",
-    "from openpyxl import load_workbook"
+    "from openpyxl import load_workbook\n",
+    "import math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SPREADSHEET_FILEPATH = \"investments.xlsx\""
    ]
   },
   {
@@ -23,30 +33,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SPREADSHEET_FILE_PATH = \"investments.xlsx\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def execute_investments(distribution_dict, sheet_name):\n",
+    "from pydantic import BaseModel\n",
+    "class InvestmentRequest(BaseModel):\n",
+    "    sheet_name: str\n",
+    "    distribution_dict: dict\n",
+    "\n",
+    "def execute_investments(\n",
+    "    request: InvestmentRequest\n",
+    ") -> None:\n",
     "    \"\"\"\n",
-    "    Updates the investment values in the given sheet based on the distribution dictionary.\n",
+    "    Updates the investment values in the given sheet\n",
+    "    based on the distribution dictionary.\n",
+    "    Use the return value of the get_investment_distribution\n",
+    "    function as the parameter distribution_dict.\n",
     "    \"\"\"\n",
-    "    wb = load_workbook(SPREADSHEET_FILE_PATH)\n",
-    "    ws = wb[sheet_name]\n",
+    "    wb = load_workbook(SPREADSHEET_FILEPATH)\n",
+    "    ws = wb[request.sheet_name]\n",
     "    for cols in list(ws.rows)[0]:\n",
     "        if cols.value == \"Investment\":\n",
     "            investment_letter = cols.column_letter\n",
     "    for idx, tick_xls in enumerate(ws[\"A\"][1:], start=1):\n",
-    "        current_investment = ws[investment_letter][idx].value\n",
-    "        for tick_inv, quant in distribution_dict.items():\n",
-    "            if tick_xls.value == tick_inv:\n",
+    "        current_investment = ws[investment_letter][idx].value or 0\n",
+    "        for tick_inv, quant in request.distribution_dict.items():\n",
+    "            if tick_xls.value == tick_inv and not isinstance(current_investment, str):\n",
+    "                # print(current_investment, quant)\n",
+    "                print(ws[investment_letter][idx].value)\n",
     "                ws[investment_letter][idx].value = current_investment + quant\n",
-    "    wb.save(SPREADSHEET_FILE_PATH)"
+    "    wb.save(SPREADSHEET_FILEPATH)"
    ]
   },
   {
@@ -81,12 +94,12 @@
     "    Given a total investment value, this function returns the \n",
     "    monetary value for each investment based on each investment percentage.\n",
     "    \"\"\"\n",
-    "    df = pd.read_excel(\"investments.xlsx\", sheet_name=sheet_name)\n",
+    "    df = pd.read_excel(\"investments.xlsx\", sheet_name=sheet_name).fillna(0)\n",
     "    def_col = df.columns[0]\n",
     "    distribution = {}\n",
     "    sum_to_be_invested = 0\n",
     "    new_value = total_value\n",
-    "    while sum_to_be_invested != total_value:\n",
+    "    while math.ceil(sum_to_be_invested) != total_value:\n",
     "        for _, row in df.iterrows():\n",
     "            if row[\"Target Percentage\"] >= row[\"Current Percentage\"] and \\\n",
     "                row[\"Target Percentage\"] < 1.0:\n",
@@ -98,9 +111,7 @@
     "        new_value = total_value - sum_to_be_invested\n",
     "    for key in distribution.keys():\n",
     "        distribution[key] = round(distribution[key], 2)\n",
-    "    return distribution\n",
-    "\n",
-    "get_investment_distribution(\"Distribution\", 15000)"
+    "    return distribution"
    ]
   },
   {
